--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "better-sqlite3": "^12.2.0",
     "drizzle-orm": "^0.44.3",
+    "drizzle-zod": "^0.8.2",
     "nuxt": "^4.0.0",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
