--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.15.0",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.11",
     "better-sqlite3": "^12.2.0",
     "drizzle-orm": "^0.44.3",
     "nuxt": "^4.0.0",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
